--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <span>Dashboard</span>
+    <div class="nav">
+        <div class="header">
+            <div class="logo">
+                <div class="flex-container1">
+                    <div class="box1"></div>
+                    <div class="box2"></div>
+                </div>
+                <div class="flex-container2">
+                    <div class="box3"></div>
+                    <div class="box4"></div>
+                </div>
+            </div>
+            <div>Dashboard</div>
         </div>
-    </header>
+    </div>
 </body>
 </html>
